--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -5,27 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="/css/myworkoutscss.css" rel="stylesheet">
 </head>
 
 <body>
-	<header>
-		<div class="container">
-			<div class="jumbotron">
-					<h1>{{projectName}}</h1>
-					<p>Try and go back to the first screen</p>
-			</div>
-		</div>
-	</header>
-	<ol>
-		<button type="button"><li><a href="../">Hello</a></li></button>
-	</ol>
-	<img src="../squat.jpg" alt="Squat" height="42" width="42">
-	<h3>Squats</h3>
-	<!--Include json files for workouts in week 6, SEE LAB4 for help-->
-
-	
-
-
+	<div class="container">
+		<h1><a href="../">{{projectName}}</a></h1>
+		<ul>
+			<li>Legs</li>
+			<li>Legs</li>
+			<li>Legs</li>
+			<li>Legs</li>
+		</ul>
+	</div>
 </body>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
