--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -6,25 +6,16 @@
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/indexcss.css" rel="stylesheet">
-	<link href="/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
 	<div class="container">
-		<!--Buttons/Header-->
-		<h1 class="web_name"> WorkOut Builder</h1>
-			{{#each nav_title}}
-				<button id="nav_btn"><a href="{{path}}">{{name}}</a></button>
-			{{/each}}
-		
-		
-	
-		<!--button class = "start_center">Start</a></button-->
-
-
+		<h1 class="web_name_start">Help and Documentation</h1>
+		<h2>THIS IS MY HELP TEST</h2>
+		<br><button id="back_btn" onclick="window.history.back()"><a href="">Back</a></button>
 	</div>
+
 </body>
-	
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 </body>
