--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -5,19 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="/css/myworkoutscss.css" rel="stylesheet">
+	<link href="/css/indexcss.css" rel="stylesheet">
 </head>
 
 <body>
 	<div class="container">
-		<h1><a href="../">{{projectName}}</a></h1>
-		<ul>
-			<li>Legs</li>
-			<li>Legs</li>
-			<li>Legs</li>
-			<li>Legs</li>
-		</ul>
+		<h1 class="web_name_start">Start</h1>
+		<h2>What do you want to workout today?</h2>
+		<br><button id="back_btn" onclick="window.history.back()"><a href="">Back</a></button>
 	</div>
+
 </body>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
