--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,22 +7,89 @@
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/indexcss.css" rel="stylesheet">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
+	<script src="js/script.js" type="text/javascript"></script>
 </head>
 
 <body>
+	<!--HEADER-->
+	<header>
+		<div id="app_title">
+			<h1>P91</h1>
+		</div>
+	</header>
+	<!--TIMER -->
 	<div class="container">
-		<!--Buttons/Header-->
-		<h1 class="web_name"> WorkOut Builder</h1>
+		<div id="timer">
+
+			<div id = "time_display">
+				00:00:00
+			</div>
+
+			<div class="buttons">
+				<button id="startStop" onclick="startStop()">Start</button>
+				<button id="reset" onclick="reset()">Reset</button>
+
+			</div>
+		</div>
+	</div>
+
+
+	<!--Question Container-->
+	<div class="myexercises">
+		<div class="interval_container">
+			<label id="input_timer">Interval per Minute(1-10):</label>
+			<br>
+			<input type="number" id="input" onclick="clear()" min="1" max="10">
+	    	<button id="input_btn" onclick="intervalTime()">Go!</button>
+	    	<h1 id="textChange">Your Minute Interval is:</h1>
+	    </div>
+	    <span id="myspan1">0</span>
+
+	    <div class="exercises_contain">
+			<label id="exer_title">How many exercises are you doing(Choose 1-6)</label>
+			<br>
+			<input type="number" id="exer_input" onclick="clear()" min="1" max="6">
+	       <button id="exer_btn" onclick="exerciseCount()">Go!</button>
+	       <h1>Your total exercises are: </h1>
+	    </div>
+	    <span id="myspan2">0</span>
+	</div>
+
+		
+
+
+
+
+
+
+
+
+	<div class="home-btn">
+		<ul>
 			{{#each nav_title}}
-				<button id="nav_btn"><a href="{{path}}">{{name}}</a></button>
+				<button id="app_btn"><a href="{{path}}">{{name}}</a></button>
 			{{/each}}
-		
-		
-	
-		<!--button class = "start_center">Start</a></button-->
+		</ul>
 
 
 	</div>
+
+
+
+
+
+
+
+
+		<!--
+		<form id=#todoForm">
+			<input id="todoInput">	
+			<button type="button" onclick="todoList()">Click Me</button>
+		</form>
+		
+		<ol id="todoList">
+		</ol-->
+
 </body>
 	
 <script src="https://code.jquery.com/jquery.js"></script>
