--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -11,7 +11,9 @@
 <body>
 	<div class="container">
 		<h1 class="web_name_start">Help and Documentation</h1>
-		<h2>THIS IS MY HELP TEST</h2>
+		<h3>Step 1: Insert your desired time to be notified per exercise.</h3>
+		<h3>Step 2: Insert how many exercises you plan to do in the gym.</h3>
+		<h3>Step 3: Press the start button to begin your training. A reminder will tell that your time for an exercise is over,  and that you should go to the next exercise.</h3>
 		<br><button id="back_btn" onclick="window.history.back()"><a href="">Back</a></button>
 	</div>
 
