Adding Facbook login and Json data

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,14 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="/css/indexcss.css" rel="stylesheet">
 </head>
 
 <body>
 	<div class="container">
-		<h1 class="web_name_start">My Workouts</h1>
-		<h2>THIS IS OUR MY WORKOUT PAGE</h2>
-		<br><button id="back_btn" onclick="window.history.back()"><a href="">Back</a></button>
+		<form method="post" id="loginform">
+			<h1 class="web_name_start">P91X</h1>
+			<h2>Login</h2>
+			<br><h4 id="usernameText">UserName</h4>
+			<input type="text" id="userName">
+			<br><h4 id="passowrdText">Password</h4>
+			<input type="text" id="passWord">
+			<h5><a href = "../">Login</a></h5>
+		</form>
 	</div>
 
 </body>
