--- a/public/css/indexcss.css
+++ b/public/css/indexcss.css
@@ -58,9 +58,14 @@ header{
 	border-style: solid;
 	text-align: center;
 	width:95%;
+
+
 	position: absolute;
 	left:10px;
 	bottom: 100px;
+
+
+	
 	height: 400px;
 	display: block;
 }
@@ -139,11 +144,19 @@ header{
 	font-size: 20px;
 	margin: 1px 2px 1px 0px;
 	font-size: 24px;
+	position: absolute;
+	bottom: 30px;
 }
 
 .home-btn{
 	position: absolute;
 	left: 100px;
+}
+
+#fb{
+	position: absolute;
+	bottom: 2px;
+	left: 63px;
 }
 
 
