--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,6 +8,8 @@
 	<link href="/css/indexcss.css" rel="stylesheet">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<script src="js/script.js" type="text/javascript"></script>
+	{{> facebook}}
+	<script src="/js/facebook.js"></script>
 </head>
 
 <body>
@@ -37,10 +39,13 @@
 	<!--Question Container-->
 	<div class="myexercises">
 		<div class="interval_container">
+
+
+
 			<label id="input_timer">Interval per Minute(1-10):</label>
 			<br>
 			<input type="number" id="input" onclick="clear()" min="1" max="10">
-	    	<button id="input_btn" onclick="intervalTime()">Go!</button>
+	    	<button id="input_btn" onclick="intervalTime()">Submit</button>
 	    	<h1 id="textChange">Your Minute Interval is:</h1>
 	    </div>
 	    <span id="myspan1">0</span>
@@ -49,7 +54,7 @@
 			<label id="exer_title">How many exercises are you doing(Choose 1-6)</label>
 			<br>
 			<input type="number" id="exer_input" onclick="clear()" min="1" max="6">
-	       <button id="exer_btn" onclick="exerciseCount()">Go!</button>
+	       <button id="exer_btn" onclick="exerciseCount()">Submit</button>
 	       <h1>Your total exercises are: </h1>
 	    </div>
 	    <span id="myspan2">0</span>
@@ -67,11 +72,13 @@
 	<div class="home-btn">
 		<ul>
 			{{#each nav_title}}
+				{{#each Nav}}
 				<button id="app_btn"><a href="{{path}}">{{name}}</a></button>
+				{{/each}}
 			{{/each}}
 		</ul>
-
-
+		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" id="fb">
+		</fb:login-button>
 	</div>
 
 
