--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -13,10 +13,9 @@
 		<h1 class="web_name_start">Help and Documentation</h1>
 		<h3>Step 1: Insert your desired time to be notified per exercise.</h3>
 		<h3>Step 2: Insert how many exercises you plan to do in the gym.</h3>
-		<h3>Step 3: Press the start button to begin your training. A reminder will tell that your time for an exercise is over,  and that you should go to the next exercise.</h3>
-		<br><button id="back_btn" onclick="window.history.back()"><a href="">Back</a></button>
+		<h3>Step 3: Press the start button to begin your training. A reminder will tell that your time for an exercise is over,  and that you should go to the next exercise.</h3>	
 	</div>
-
+	<br><button id="back_btn_back" onclick="window.history.back()"><a href="">Back</a></button>
 </body>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
