--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,7 +16,7 @@
 			<input type="text" id="userName">
 			<br><h4 id="passowrdText">Password</h4>
 			<input type="text" id="passWord">
-			<h5><a href = "../">Login</a></h5>
+			<h5><a href = "/index">Login</a></h5>
 		</form>
 	</div>
 
