--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -1,43 +1,20 @@
 <html>
 <head>
-	<title>HCI Project Portfolio</title>	
+	<title>Start</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+	<link href="/css/startcss.css" rel="stylesheet">
 	<link href="/css/indexcss.css" rel="stylesheet">
-	<link href="/css/bootstrap.min.css" rel="stylesheet">
-	<script src="js/script.js" type="text/javascript"></script>
-	{{> facebook}}
-	<script src="/js/facebook.js"></script>
+	<script src="/js/script.js" type="text/javascript"></script>
+
+
 </head>
 
 <body>
-	<!--HEADER-->
-	<header>
-		<div id="app_title">
-			<h1>P91</h1>
-		</div>
-	</header>
-	<!--TIMER -->
 	<div class="container">
-		<div id="timer">
-
-			<div id = "time_display">
-				00:00:00
-			</div>
-
-			<div class="buttons">
-				<button id="startStop" onclick="startStop()">Start</button>
-				<button id="reset" onclick="reset()">Reset</button>
-
-			</div>
-		</div>
-	</div>
-
-
-	<!--Question Container-->
-	<div class="myexercises">
+		<h1 class="web_name_start">AddWorkout</h1>
 		<div class="interval_container">
 			<label id="input_timer">Interval per Minute(1-10):</label>
 			<br>
@@ -56,46 +33,12 @@
 	    </div>
 	    <span id="myspan2">0</span>
 	</div>
-
-		
-
-
-
-
-
-
-
-
-	<div class="home-btn">
-		<ul>
-			{{#each nav_title}}
-				{{#each Nav}}
-				<button id="app_btn"><a href="{{path}}">{{name}}</a></button>
-				{{/each}}
-			{{/each}}
-		</ul>
-		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" id="fb">
-		</fb:login-button>
+		<br><button id="back_btn2" onclick="window.history.back()"><a href="">Save</a></button>
 	</div>
 
-
-
-
-
-
-
-
-		<!--
-		<form id=#todoForm">
-			<input id="todoInput">	
-			<button type="button" onclick="todoList()">Click Me</button>
-		</form>
-		
-		<ol id="todoList">
-		</ol-->
-
 </body>
-	
+
+
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 </body>
