--- a/public/css/main.css
+++ b/public/css/main.css
@@ -74,12 +74,14 @@ h4 {
 	position: sticky;
 	bottom: 0;
 }
+/*nav bar*/
 .home-btn{
 	list-style-type: none;
 /*	margin: 5% 2% 2% 2%;
 	padding: 2%*/
 	width: 95%;
 	bottom:1%;
+	margin-left: 2%;
 	position: fixed;
 	overflow: hidden;
 	background: white;
@@ -130,8 +132,9 @@ margin-top: 15%;
 }
 /*submit button*/
 #exer_btn{
-	font-size: 20px;
+	font-size: 24px;
 	margin-left: 30%;
+
 }
 
 /*add workout info*/
