Include A/B changes to the index and altindex

--- a/views/premade.handlebars
+++ b/views/premade.handlebars
@@ -17,15 +17,11 @@
 
 
 		<!--Perset Workouts-->
-		<div class="myexercises">
-			
-			<button id="addworkout_btn"><a href="add">Add Workout</a></button>
-			<h3>History</h3>
-			<ul id="all_exer">
-				<li>Hello</li>
-			</ul>
+		<div class="workoutname">
+			<h3>Workout List Comming Summer 2019</h3>
 		</div>
 
+		<!--Nav Bar-->
 		<div class="home-btn">
 			<ul>
 				{{#each Nav}}
@@ -34,10 +30,10 @@
 			</ul>
 		</div>
 
-		<div class="presetWorkout">
-			<h3>Our App Creates Pre-Made Workouts for you!</h3>
-			<button id="preworkout_btn"><a href="premade">Learn More</a></button>
-		</div>
+
+			
+
+
 
 
 
