--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -4,16 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/main.css" rel="stylesheet">
-	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-135197093-1', 'auto');
-ga('send', 'pageview');
-</script>
-
+	{{> google}}
 </head>
 <body>
 	<div class="timer">
@@ -33,7 +24,7 @@ ga('send', 'pageview');
 			<label id="input_timer">Workout Name:</label>
 			<input type="text" id="exer_name" onclick="clear()">
 			<br>
-			<label id="input_timer">Interval per Minute(1-10):</label>
+			<label id="input_timer">Interval per Minu1te(1-10):</label>
 			<br>
 			<input type="number" id="input" onclick="clear()" min="1" max="10">
 	    	<!--button id="input_btn" onclick="intervalTime()">Submit</button-->
