--- a/views/altbindex.handlebars
+++ b/views/altbindex.handlebars
@@ -4,15 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/main.css" rel="stylesheet">
-	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-135197093-1', 'auto');
-ga('send', 'pageview');
-</script>
+	{{> google}}
 </head>
 
 <body>
@@ -22,20 +14,6 @@ ga('send', 'pageview');
 				<h1>P91</h1>
 			</div>
 		</header>
-		<div class="timerb">
-	        {{exercise.name}}
-	        <input type="hidden" id="name" value={{exercise.name}}>
-	        <input type="hidden" id="exer_interval" value={{exercise.interval}}>
-	        <input type="hidden" id="total_exer" value={{exercise.total_exercises}}>
-
-	            <div id = "time_displayb">
-	                00:00:00
-	            </div>
-	            <div class="buttonsb">
-	                <button id="startStop" onclick="startStop()">GO</button>
-	                <button id="reset" onclick="reset()">Reset</button>
-	            </div>
-	    </div>
 
 
 		<!--Perset Workouts-->
@@ -55,6 +33,14 @@ ga('send', 'pageview');
 				{{/each}}
 			</ul>
 		</div>
+
+		<div class="presetWorkout">
+			<h3>Our App Creates Pre-Made Workouts for you!</h3>
+			<button id="preworkout_btn"><a href="premade">Sign Up for Pre Made Workouts</a></button>
+		</div>
+			
+
+
 
 
 
