--- a/views/timer.handlebars
+++ b/views/timer.handlebars
@@ -25,9 +25,8 @@
 
     <div class="home-btn">
 			<ul>
-				{{#each Nav}}
-				<button id="app_btn"><a href="{{path}}">{{name}}</a></button>
-				{{/each}}
+				<button id="app_btn"><a href="../index">Home</a></button>
+                <button id="app_btn"><a href="../help">Help</a></button>
 			</ul>
 	</div>
 
