--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,16 +1,18 @@
 body{
 	margin: 0px ;/*outside object*/
 	padding: 0px; /*inside object*/
-	background: #FAFAD2;
+	background: #ff695e;
 	font-family: "verdana", sans serif;
 }
-
+h1{
+	color:#254260;
+}
 header{
 	margin: 2%;
 	padding: 2%;
 	width: 90%;
-	background:#f8fcb5 ;
-	border:1px solid;
+	/*background:#f8fcb5 ;
+	border:1px solid;*/
 	
 }
 
@@ -37,7 +39,7 @@ h4 {
 	list-style-type: none;
 	display: block;
 	width: 250px;
-	background-color: white;
+	background-color: #eef5db;
 	align-items: center;
 	 text-align: center;
 	 padding: 15px;
@@ -54,8 +56,11 @@ h4 {
 }
 
 #addworkout_btn{
+	width: 50%;
+	margin-right: 25%;
 	margin-left: 25%;
-	font-size: 30px;
+	font-size: 25px;
+	
 }
 
 
@@ -82,7 +87,7 @@ h4 {
 	width: 95%;
 	bottom:1%;
 	margin-left: 2%;
-	position: fixed;
+	position:fixed;
 	overflow: hidden;
 	background: white;
 	border:2px solid #42bcf4;
@@ -109,7 +114,7 @@ margin-top: 15%;
 	border: 2px grey;
 	background: #B0E0E6;
 	border-radius: 9px;
-	margin-left: 30%;
+	margin-left: 25%;
 	margin-top: 5%;
 	text-align: center;
 	padding: 10px;
@@ -120,7 +125,7 @@ margin-top: 15%;
 	background: #B0E0E6;
 	border-radius: 9px;
 	padding: 10px;
-	margin-right: 20%;
+	margin-right: 25%;
 	margin-top: 5%;
 
 }
@@ -129,6 +134,10 @@ margin-top: 15%;
 	margin-left: 5%;
 	color: green;
 
+}
+.timer{
+	font-size: 20px;
+	text-align:center;
 }
 /*submit button*/
 #exer_btn{
