--- a/public/css/logincss.css
+++ b/public/css/logincss.css
@@ -16,7 +16,8 @@ h3{
 	text-align: center;
 }
 h5{
-	text-align: center;
+	text-align: right;
+	margin-right: 15%;
 	font-size: 25px;
 	color:lightblue;
 }
