--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,11 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	{{> facebook}}
-<<<<<<< HEAD
+
 	<link href="/css/logincss.css" rel="stylesheet">
-=======
 	{{> google}}
->>>>>>> 6e27487e3b4aa0c539f16c1a81479121786c1926
 	<script src="/js/facebook.js"></script>
 	
 </head>
@@ -42,6 +40,9 @@
   <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
 </div>
 </div>
+
+<h5><a href = "/index">Login</a></h5
+
 <h3>Or login through Facebook</h3>
 <div id="outer" style="width:100%">
 <div id="fblogin">
@@ -49,7 +50,6 @@
 	</fb:login-button>
 </div>
 </div>
-		<h5><a href = "/index">Login</a></h5>
 		</div>
 		</form>
 	
