--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -50,7 +50,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 
 		<div class="presetWorkout">
 			<h3>Our App Creates Pre-Made Workouts for you!</h3>
-			<button id="preworkout_btn"><a href="premade">Learn More</a></button>
+			<button onclick="ga( 'create', 'UA-135197093-1', 'auto' ); ga('send', 'event', 'like', 'click');" id="preworkout_btn"><a href="premade">Learn More</a></button>
 		</div>
 
 
