Added ga button to altindex handlebar

--- a/views/altbindex.handlebars
+++ b/views/altbindex.handlebars
@@ -35,7 +35,7 @@
 
 		<div class="presetWorkout">
 			<h3>Our App Creates Pre-Made Workouts for you!</h3>
-			<button id="preworkout_btn"><a href="premade">Sign Up for Pre Made Workouts</a></button>
+			<button onclick="ga( 'create', 'UA-135197093-1', 'auto' ); ga('send', 'event', 'like', 'click');"id="preworkout_btn"><a href="premade">Sign Up for Pre Made Workouts</a></button>
 		</div>
 			
 
