Made minor changes to add button and cleaned our main css file

--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -17,7 +17,7 @@
 			<label id="input_timer">Workout Name:</label>
 			<input type="text" id="exer_name" onclick="clear()">
 			<br>
-			<label id="input_timer">Interval per Minu1te(1-10):</label>
+			<label id="input_timer">Minutes Per Interval(1-10):</label>
 			<br>
 			<input type="number" id="input" onclick="clear()" min="1" max="10">
 	    	<!--button id="input_btn" onclick="intervalTime()">Submit</button-->
