--- a/public/css/logincss.css
+++ b/public/css/logincss.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0px ;/*outside object*/
 	padding: 0px; /*inside object*/
-	background: #ff695e;
+	background: #ededed;
 	font-family: "verdana", sans serif;
 }
 h1{
