--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -15,9 +15,11 @@
 
 	<form class="interval_container" method="POST" id="data_form" action="/add">
 			<label id="input_timer">Workout Name:</label>
+			<br>
 			<input type="text" id="exer_name" onclick="clear()">
 			<br>
-			<label id="input_timer">Interval per Minu1te(1-10):</label>
+			
+			<label id="input_timer">Interval per Minute(1-10):</label>
 			<br>
 			<input type="number" id="input" onclick="clear()" min="1" max="10">
 	    	<!--button id="input_btn" onclick="intervalTime()">Submit</button-->
