--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,28 +1,21 @@
 body{
 	margin: 0px ;/*outside object*/
 	padding: 0px; /*inside object*/
-<<<<<<< HEAD
-	background: #ff695e;
+	background: #ededed;
 	font-family: "verdana", sans serif;
 }
 h1{
 	color:#254260;
-=======
-	background: #FAFAD2;
 	font-family: "verdana", sans serif;
->>>>>>> 6e27487e3b4aa0c539f16c1a81479121786c1926
 }
 header{
 	margin: 2%;
 	padding: 2%;
 	width: 90%;
-<<<<<<< HEAD
 	/*background:#f8fcb5 ;
-	border:1px solid;*/
-=======
-	background:#f8fcb5 ;
 	border:1px solid;
->>>>>>> 6e27487e3b4aa0c539f16c1a81479121786c1926
+	background:#f8fcb5 ;
+	border:1px solid;*/
 	
 }
 
@@ -32,6 +25,7 @@ a{
 /*p91 title*/
 #app_title{
 	text-align: center;
+	font-size: 20px;
 }
 
 /*history block*/
@@ -49,11 +43,8 @@ h4 {
 	list-style-type: none;
 	display: block;
 	width: 250px;
-<<<<<<< HEAD
 	background-color: #eef5db;
-=======
 	background-color: white;
->>>>>>> 6e27487e3b4aa0c539f16c1a81479121786c1926
 	align-items: center;
 	 text-align: center;
 	 padding: 15px;
@@ -67,7 +58,6 @@ h4 {
  }
  li:last-child {
   border-bottom: none;
-<<<<<<< HEAD
 }
 
 #addworkout_btn{
@@ -78,7 +68,6 @@ h4 {
 	
 }
 
-=======
 }
 
 #addworkout_btn{
@@ -86,7 +75,6 @@ h4 {
 	font-size: 30px;
 }
 
->>>>>>> 6e27487e3b4aa0c539f16c1a81479121786c1926
 
 
 
@@ -108,17 +96,14 @@ h4 {
 	list-style-type: none;
 /*	margin: 5% 2% 2% 2%;
 	padding: 2%*/
-	width: 95%;
+	width: 97%;
 	bottom:1%;
-	margin-left: 2%;
-<<<<<<< HEAD
+	margin-left: 1.5%;
 	position:fixed;
-=======
 	position: fixed;
->>>>>>> 6e27487e3b4aa0c539f16c1a81479121786c1926
 	overflow: hidden;
 	background: white;
-	border:2px solid #42bcf4;
+	/*border:2px solid #2d3651;*/
 	border-radius: 6px;
 }
 
@@ -126,9 +111,8 @@ h4 {
 	margin: 0% 4% 0% 4%;
 	width: 35%;
 	background: white;
-	border: 2px solid #42bcf4;
+	border: 2px solid #cfe7f7;
 	border-radius: 6px;
-	
 	font-size: 20px;
 }
 /*timer*/
@@ -137,25 +121,20 @@ font-size:50px;
 text-align: center;
 margin-top: 15%;
 }
-<<<<<<< HEAD
-=======
+
 
 #time_displayb{
 font-size:30px;
 text-align: center;
 margin-top: 2%;
 }
->>>>>>> 6e27487e3b4aa0c539f16c1a81479121786c1926
 #startStop{
 	font-size: 20px;
 	border: 2px grey;
 	background: #B0E0E6;
 	border-radius: 9px;
-<<<<<<< HEAD
 	margin-left: 25%;
-=======
 	margin-left: 30%;
->>>>>>> 6e27487e3b4aa0c539f16c1a81479121786c1926
 	margin-top: 5%;
 	text-align: center;
 	padding: 10px;
@@ -166,11 +145,8 @@ margin-top: 2%;
 	background: #B0E0E6;
 	border-radius: 9px;
 	padding: 10px;
-<<<<<<< HEAD
 	margin-right: 25%;
-=======
 	margin-right: 20%;
->>>>>>> 6e27487e3b4aa0c539f16c1a81479121786c1926
 	margin-top: 5%;
 
 }
@@ -180,25 +156,25 @@ margin-top: 2%;
 	color: green;
 
 }
-<<<<<<< HEAD
 .timer{
 	font-size: 20px;
 	text-align:center;
 }
-=======
->>>>>>> 6e27487e3b4aa0c539f16c1a81479121786c1926
+
 /*submit button*/
 #exer_btn{
 	font-size: 24px;
-	margin-left: 30%;
+	/*margin-left: 30%;*/
+	display: table;
+	margin: 0 auto;
 
 }
-
+h3{
+	margin-left: 3%;
+}
 /*add workout info*/
 #data_form{
 	margin-left: 5%;
+	margin-top: 10%;
 	font-size: 18px;
-
-
-
 }
