--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,26 +2,21 @@ body{
 	margin: 0px ;/*outside object*/
 	padding: 0px; /*inside object*/
 	background: #ededed;
-	background: #ff695e;
 	font-family: "verdana", sans serif;
 }
 h1{
 	color:#254260;
 	font-family: "verdana", sans serif;
-	background: #FAFAD2;
-	font-family: "verdana", sans serif;
+	height:10%;
 }
 header{
 	margin: 2%;
 	padding: 2%;
 	width: 90%;
-	/*background:#f8fcb5 ;
+	/*background:#f8fcb5;
 	border:1px solid;
 	background:#f8fcb5 ;
 	border:1px solid;*/
-	border:1px solid;*/
-	background:#f8fcb5 ;
-	border:1px solid;
 	
 }
 
