--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -32,7 +32,7 @@
 			<br>
 			<input type="number" id="exer_input" onclick="clear()" min="1" max="6">
 			<br>
-	       <button id="exer_btn">Submit</button>
+	       <button id="exer_btn"class="btn btn-primary btn-lg btn-block">Submit</button>
 	</form>
 
 
