--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -18,15 +18,17 @@
 			<br>
 			<input type="text" id="exer_name" onclick="clear()">
 			<br>
+			<br>
 
 			
-			<label id="input_timer">Interval per Minute(1-10):</label>
+			<!--<label id="input_timer">Interval per Minute(1-10):</label>-->
 
 			<label id="input_timer">Minutes Per Interval(1-10):</label>
 
 			<br>
 			<input type="number" id="input" onclick="clear()" min="1" max="10">
 	    	<!--button id="input_btn" onclick="intervalTime()">Submit</button-->
+	    	<br>
 	    	<br>
 	    	<label id="exer_title">How many exercises are you doing(Choose 1-6)</label>
 			<br>
