--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="containerhelp">
+	<div class="containerhelp" id="helpInfo">
 		<h1 class="web_name_start">Help and Documentation</h1>
 		<h3>Step 1: Insert your desired time to be notified per exercise.</h3>
 		<h3>Step 2: Insert how many exercises you plan to do in the gym.</h3>
@@ -23,7 +23,7 @@
 			{{/each}}
 		</ul>
 	</div>
-	<!--<br><button id="back_btn_back" onclick="window.history.back()"><a href="">Back</a></button>-->
+	
 </body>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
