--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,32 +17,32 @@
 			<h1 class="web_name_start">P91X</h1>
 			<div class="container">
 			<h2>Sign up</h2>
-			<div class="input-group">
+			<div class="input-group" id="inputForm">
   <div id="signup"style="width:100%">
   <div class="input-group-prepend">
     <span class="input-group-text">First and last name:</span>
   </div>
   <div class="shadow-sm p-3 mb-5 bg-white rounded">
-  <input type="text" aria-label="First name" class="form-control">
-  <input type="text" aria-label="Last name" class="form-control">
+  <input type="text" aria-label="First name" class="form-control" id="input1">
+  <input type="text" aria-label="Last name" class="form-control" id="input2">
 </div>
 </div>
 <div class="input-group mb-3">
   <div class="input-group-prepend">
     <span class="input-group-text" id="inputGroup-sizing-lg">Email:</span>
   </div>
-  <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+  <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="input3">
 </div>
 <div class="input-group mb-3">
   <div class="input-group-prepend">
     <span class="input-group-text" id="inputGroup-sizing-lg">Password:</span>
   </div>
-  <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+  <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" id="input4">
 </div>
 </div>
 
 <h5><a href = "/index">Login</a></h5
-
+</div>
 <h3>Or login through Facebook</h3>
 <div id="outer" style="width:100%">
 <div id="fblogin">
@@ -50,7 +50,7 @@
 	</fb:login-button>
 </div>
 </div>
-		</div>
+<!--	</div>-->
 		</form>
 	
 
